--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <script>
+        function openNewWindow(url) {
+          window.open(url, '_blank');
+        }
+        </script>
 
 </head>
 <body>
@@ -25,8 +30,8 @@
                 <li><a href="index.html#home" class="menu-btn">Home</a></li>
                 <li><a href="index.html#about" class="menu-btn">About</a></li>
                 <li><a href="index.html#skills" class="menu-btn">Skills</a></li>
-                <li><a href="index.html#services" class="menu-btn">Publications</a></li>
-                <li><a href="index.html#teams" class="menu-btn">Projects</a></li>
+                <li><a href="index.html#services" class="menu-btn">Projects</a></li>
+                <li><a href="index.html#teams" class="menu-btn">Publications</a></li>
                 <li><a href="index.html#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -46,11 +51,6 @@
         <h2 class="title">Publications</h2>
         <h3 class="paragraph">In this version, the responsive option within the Owl Carousel configuration has been adjusted to display different numbers of items for different screen sizes. You can further customize the number of items for specific breakpoints based on your design preferences. Adjust the values in the responsive option as needed.</h3>
         <div class="grid-container">
-            <script>
-                function openNewWindow(url) {
-                  window.open(url, '_blank');
-                }
-                </script>
             <div class="card" onclick="openNewWindow('projects/project1.html');">
                 <div class="box">
                     <img src="images/profile-1.jpeg" alt="">
