removed hire me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-3"><span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <!--<a href="#">Hire me</a>-->
             </div>
         </div>
     </section>
