--- a/index.html
+++ b/index.html
@@ -136,14 +136,16 @@
                     <div class="box">
                         <i class="fab fa-python"></i>
                         <div class="text">Data Science & Programming</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Diverse projects in academia and real-world applications, utilizing Python, R, and Matlab programming languages for analysis, research, and development.</p>
+                        <a href="#" style="color: crimson;">Read more</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fa fa-users"></i>
                         <div class="text">Trainings and Workshops</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Conducted virtual and in-person training on UAV, GIS, Remote Sensing, and Google Earth Engine internationally and nationally, focusing on cutting-edge technology.</p>
+                        <a href="#" style="color: crimson;">Read more</a>
                     </div>
                 </div>
                </div>
@@ -196,7 +198,8 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>
+                        I'm open to connecting with people who have similar interests and am excited about working together on real-world projects or research. Let's connect and explore opportunities together!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
