--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
-    <nav class="navbar">
+    <nav class="navbar1">
         <div class="max-width">
             <div class="logo"><a href="#">Anil Mandal</a></div>
             <ul class="menu">
@@ -40,8 +40,6 @@
         </div>
     </nav>
 
-   
-    
 
     
 
@@ -49,39 +47,52 @@
 <section class="projects" id="projects">
     <div class="max-width">
         <h2 class="title">Publications</h2>
-        <h3 class="paragraph">In this version, the responsive option within the Owl Carousel configuration has been adjusted to display different numbers of items for different screen sizes. You can further customize the number of items for specific breakpoints based on your design preferences. Adjust the values in the responsive option as needed.</h3>
         <div class="grid-container">
-            <div class="card" onclick="openNewWindow('projects/project1.html');">
+            <div class="card" onclick="openNewWindow('projects/pdf/sump.pdf');">
                 <div class="box">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="projects/img/sump.gif" alt="">
+                    <div class="text">Someone name</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card" onclick="openNewWindow('https://nepal.iom.int/sites/g/files/tmzbdl1116/files/documents/OpenSpacesReport_of_Bhimeshwor.pdf');">
+                <div class="box">
+                    <img src="projects/img/os_bhimeshwor.png" alt="">
+                    <div class="text">Someone name</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card" onclick="openNewWindow('projects/pdf/dolma.pdf');">
+                <div class="box">
+                    <img src="projects/img/dolma.png" alt="">
+                    <div class="text">Someone name</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card" onclick="openNewWindow('projects/pdf/glacier.pdf');">
+                <div class="box">
+                    <img src="projects/img/glacier.png" alt="">
+                    <div class="text">Someone name</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card" onclick="openNewWindow('projects/pdf/geoadptive.pdf');">
+                <div class="box">
+                    <img src="projects/img/geoadptive.png" alt="">
+                    <div class="text">Someone name</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card" onclick="openNewWindow('projects/pdf/mapbook_bhim.pdf');">
+                <div class="box">
+                    <img src="projects/img/mapbook_bhimesh.png" alt="">
                     <div class="text">Someone name</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="images/profile-2.jpeg" alt="">
-                    <div class="text">Someone name</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="images/profile-3.jpeg" alt="">
-                    <div class="text">Someone name</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="images/profile-4.jpeg" alt="">
-                    <div class="text">Someone name</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="images/profile-5.jpeg" alt="">
+                    <img src="projects/img/periodic_plan.png" alt="">
                     <div class="text">Someone name</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
