--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
     <!-- projects section start -->
 <section class="projects" id="projects">
     <div class="max-width">
-        <h2 class="title">Publications</h2>
+        <h2 class="title">Projects Involved</h2>
         <div class="grid-container">
             <div class="card" onclick="openNewWindow('projects/pdf/sump.pdf');">
                 <div class="box">
@@ -104,7 +104,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href=#>AnilMandal</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created By <a href=index.html#home>AnilMandal</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
