--- a/index.html
+++ b/index.html
@@ -129,11 +129,15 @@
             <div class="mt-8 flex justify-center space-x-4">
                 <a href="#contact" class="bg-[#0D47A1] text-white px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-[#1565C0] transition-colors duration-300">Get in Touch</a>
                 <!-- Added LinkedIn button -->
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="bg-gray-300 text-gray-800 px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-gray-400 transition-colors duration-300">
+                <a href="https://www.linkedin.com/in/anil-kumar-mandal-9b2094140/" target="_blank" class="bg-gray-300 text-gray-800 px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-gray-400 transition-colors duration-300">
                     <i class="fab fa-linkedin mr-2"></i>LinkedIn
                 </a>
-                <a href="https://scholar.google.com/citations?user=your_id_here" target="_blank" class="bg-gray-300 text-gray-800 px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-gray-400 transition-colors duration-300">
+                <a href="https://scholar.google.com/citations?user=Fvs_P1QAAAAJ&hl=en" target="_blank" class="bg-gray-300 text-gray-800 px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-gray-400 transition-colors duration-300">
                     <i class="fas fa-graduation-cap mr-2"></i>Google Scholar
+                </a>
+                <!-- Added Github button to the home page -->
+                <a href="https://github.com/mandalanil" target="_blank" class="bg-gray-300 text-gray-800 px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-gray-400 transition-colors duration-300">
+                    <i class="fab fa-github mr-2"></i>Github
                 </a>
             </div>
         </div>
@@ -146,7 +150,7 @@
             <div class="md:flex md:space-x-12 items-center">
                 <div class="md:w-1/3 flex justify-center mb-8 md:mb-0">
                     <!-- Placeholder for profile image -->
-                    <img src="https://placehold.co/300x300/e2e8f0/4a5568?text=Anil" alt="Anil Kumar Mandal" class="rounded-xl shadow-xl border-4 border-gray-300">
+                    <img src="images\new_pp.jpeg" alt="Anil Kumar Mandal" class="rounded-xl shadow-xl border-4 border-gray-300">
                 </div>
                 <div class="md:w-2/3">
                     <p class="text-lg leading-relaxed text-gray-600">
@@ -338,6 +342,14 @@
                             </a>
                             <a href="https://twitter.com/yourprofile" target="_blank" class="text-gray-600 hover:text-[#0D47A1] transform transition-transform duration-300 hover:scale-125">
                                 <i class="fab fa-twitter text-3xl"></i>
+                            </a>
+                            <!-- Added Facebook link to the contact section -->
+                            <a href="https://facebook.com/yourprofile" target="_blank" class="text-gray-600 hover:text-[#0D47A1] transform transition-transform duration-300 hover:scale-125">
+                                <i class="fab fa-facebook text-3xl"></i>
+                            </a>
+                            <!-- Re-added Github link for consistency -->
+                            <a href="https://github.com/yourprofile" target="_blank" class="text-gray-600 hover:text-[#0D47A1] transform transition-transform duration-300 hover:scale-125">
+                                <i class="fab fa-github text-3xl"></i>
                             </a>
                         </div>
                     </div>
