--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <div class="md:w-1/2">
                     <div class="text-xl font-semibold text-[#0D47A1] mb-4">Message me</div>
                     <!-- The form action is updated to use Formspree. You need to replace the placeholder ID with your own. -->
-                    <form id="contact-form" action="https://form.jotform.com/252274818753061" method="POST" class="space-y-4">
+                    <form id="contact-form" action="https://formspree.io/f/xovlzqjo" method="POST" class="space-y-4">
                         <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[#1565C0]">
                         <input type="email" name="_replyto" placeholder="Your Email" required class="w-full p-3 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[#1565C0]">
                         <input type="text" name="_subject" placeholder="Subject" required class="w-full p-3 rounded-lg bg-gray-200 border border-gray-300 text-gray-800 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[#1565C0]">
