--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anil Kumar Mandal - Geospatial Scientist</title>
+    <title>Anil Kumar Mandal - Geo-AI Enthusiastic</title>
     <!-- Tailwind CSS CDN for modern styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome for icons -->
@@ -118,7 +118,7 @@
                 Anil Kumar Mandal
             </h1>
             <p class="mt-4 text-xl sm:text-2xl font-light text-gray-600">
-                Geospatial Scientist & Researcher
+                Graduate Research Assistant at Florida Atlantic University
             </p>
             <p class="mt-6 text-lg sm:text-xl max-w-2xl mx-auto">
                 Applying GIS, remote sensing, and LiDAR to tackle challenges in climate resilience, hydrology, and urban planning.
@@ -142,10 +142,8 @@
                 </div>
                 <div class="md:w-2/3">
                     <p class="text-lg leading-relaxed text-gray-600">
-                        I am a geospatial scientist with over 7 years of international experience applying GIS, remote sensing, and LiDAR to tackle critical challenges in climate resilience, hydrology, and urban planning. My work is driven by a passion for leveraging technology to create practical and innovative solutions.
-                    </p>
-                    <p class="mt-4 text-lg leading-relaxed text-gray-600">
-                        I have a strong publication record and advanced programming skills, with practical field expertise across global environments. I am recognized by USGIF and multiple research bodies for my innovation in geospatial analytics. Currently, I am pursuing a PhD in Transportation & Environmental Engineering at Florida Atlantic University, building on my Master's and Bachelor's degrees in Civil and Geomatics Engineering.
+                        I’m Anil Kumar Mandal, a passionate and driven professional pursuing my academic and research interests at Florida Atlantic University (FAU). My work focuses on building strong foundations in engineering, problem-solving, and innovation. I enjoy tackling real-world challenges through data-driven thinking, hands-on experimentation, and continuous learning.
+With a dedication to excellence and a desire to keep growing, I aim to contribute meaningfully to impactful projects, collaborative teams, and emerging technologies.
                     </p>
                     <!-- NOTE: The CV download link now points to a local file -->
                     <a href="Anil_Mandal_CV.pdf" download class="mt-6 inline-block bg-[#0D47A1] text-white px-6 py-3 rounded-full text-lg font-medium shadow-lg hover:bg-[#1565C0] transition-colors duration-300">Download CV</a>
