--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 Anil Kumar Mandal
             </h1>
             <p class="mt-4 text-xl sm:text-2xl font-light text-gray-600">
-                Graduate Research Assistant at Florida Atlantic University
+                Graduate Research Assistant at FAU
             </p>
             <p class="mt-6 text-lg sm:text-xl max-w-2xl mx-auto">
                 Applying GIS, remote sensing, and LiDAR to tackle challenges in climate resilience, hydrology, and urban planning.
